# predict-fifa-world-cup

./: .gitignore  LICENSE  README.md  clean_fixtures.py  generate_fixtures.py  output.txt  pyproject.toml  rebuild_history.py  requirements.txt  wc_predict_gnn.py
.github/workflows/: deploy.yml
codes/: compare_models.py  compare_models_2018.py  compare_models_2018.txt  compare_models_2022.py  compare_models_2022.txt  compare_output.txt  dixon-coles_output.txt  dixon_coles_wc_predict.py  gnn_output.txt  wc_predict_gnn.py
dixon-coles/: dixon-coles_output.txt  dixon-coles_wc_predict.py
src/console_outputs/: compare_models_2018.txt  compare_models_2022.txt  compare_output.txt  dixon-coles_output.txt  gnn_output.txt
src/predict_wc/: __init__.py  compare_models.py  compare_models_2018.py  compare_models_2022.py  dixon_coles_wc_predict.py  predict_stage.py  wc_predict_gnn.py
src/web/: api.py
src/web/frontend/: index.html  vite.config.js
src/web/frontend/src/: App.jsx  index.css
src/web/frontend/src/data/: fixtures.json
standard/: output.txt  wc_predict_gnn.py
